--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -13,7 +13,7 @@ jobs:
         strategy:
           matrix:
             otp: ['25.3', '26.0']
-            elixir: ['1.14']
+            elixir: ['1.14', '1.15']
         env:
           MIX_ENV: "test"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
